# alexandria-spanish-slm

./: .gitignore  LICENSE  README.md  config.yaml  infra.tf  main.py  pyproject.toml
assets/v1/: tokenizer.json
assets/v2/: tokenizer.json
docs/: data_design_choices.md  model_design_choices.md  training_pipeline_choices.md
src/: __init__.py  data_pipeline.py  dataset.py  model.py  run_inference.py  training_pipeline.py  utils.py
src/tools/data/: __init__.py  dataset_processing.py  dataset_tokenization.py  tokenizer.py  train_tokenizer.py  wikipedia_loading.py  wikipedia_xml_parser.py
tests/: test_tokenizer.py
