[project]
name = "alexandria-spanish-slm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==4.4.2",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "pyyaml==6.0.3",
    "torch==2.9.1",
    "tqdm>=4.67.1",
    "wikipedia>=1.4.0",
    "wikipedia-api>=0.8.1",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
